# loop-engineering-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.ja.md  CONTRIBUTING.md  Makefile  README.en.md  README.ja.md  README.md  SECURITY.md  STATE.md  TESTING.md  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.agents/agents/: README.md  _template.yaml  explorer.yaml  implementer.yaml  verifier.yaml
.agents/config/: schedules.yaml
.agents/skills/decision-recorder/: SKILL.md
.agents/skills/decision-recorder/evals/: evals.json
.agents/skills/knowledge-harvest/: SKILL.md
.agents/skills/knowledge-harvest/evals/: evals.json
.agents/skills/loop-engineer/: SKILL.md
.agents/skills/loop-engineer/evals/: evals.json
.agents/skills/project-bootstrapper/: SKILL.md  questions.yaml
.agents/skills/project-bootstrapper/evals/: evals.json
.agents/skills/project-manager/: SKILL.md
.agents/skills/session-reviewer/: SKILL.md
.agents/skills/skill-crafter/: SKILL.md
.agents/skills/skill-crafter/evals/: evals.json
.agents/skills/test-policy/: SKILL.md
.agents/skills/triage/: SKILL.md
.devcontainer/: README.md  devcontainer.json  on-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: agent-harness.yml  ci.yml  codeql.yml  dependency-review.yml  pages.yml  release.yml  scorecard.yml
.mcp/: README.md  database.json  example-config.json  linear.json  slack.json
docs/: 404.html  README.md  _config.yml  _sidebar.md  architecture.md  ci-cd.md  directory-structure.md  eval-harness.md  getting-started.md  hub-workflow.md  index.html  loop-patterns.md  quick-reference.md  quickstart-loop.md  schedule-setup.md  skills.md  triage-inbox.md  worktree-isolation.md
docs/adr/: 001-loop-engineering-adoption.md  _template.md
learnings/: 2026-07-16-skill-frontmatter-standardization.md  _TEMPLATE.md
scripts/: agent-runner.sh  analyze-traces.py  daily-triage.sh  goal-loop.sh  quickstart.sh  run-evals.py  validate-branch-name.py  validate-configs.py  validate-skills.py
src/: example.py
tests/: conftest.py  test_advanced.py  test_example.py  test_integration.py
tests/ts/: example.test.ts
(+4 files in other folders)
