[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "loop-engineering-template"
version = "0.1.0"
description = "Loop Engineering project template for AI-agent-assisted development"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "yamllint>=1",
    "pre-commit>=3",
    "bandit>=1.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.bandit]
exclude_dirs = ["tests", "venv", ".git", "node_modules"]
skips = ["B101"]  # allow assert statements
